--- a/habits.html
+++ b/habits.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
   </nav>
-  <div class="main_copy">
+  <div class="main_copy process">
     <h2>Habit Forming Design</h2>
     <h3>A personal exploration into understanding the psychology of habits and how these theories can be used or are already used in design.</h3>
   </div>
@@ -105,7 +105,7 @@
     <ul>
       <li><a href="habits.html">Design for Habits</a></li>
       <li><a href="integrated.html">Integrated Interfaces</a></li>
-      <li><a href="education.html">Design for International</a></li>
+      <li><a href="international.html">International Design</a></li>
     </ul>
   </div>
 </body>
