--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <a href="integrated.html">Read More &rarr;</a>
   <div class="blog_post">
-    <h2>International Design Standards</h2>
+    <h2>International Design</h2>
     <p>The rapid spread of online commerce has created an opportunity to open up digital markets and products to the international community. This also creates increased competition for your products, and a resulting need to make sure your brand can reach citizens in all languages and cultures. </p>
   </div>
   <a href="international.html">Read More &rarr;</a>
