--- a/international.html
+++ b/international.html
@@ -26,7 +26,7 @@
     </div>
   </nav>
   <div class="main_copy process">
-    <h2>Design for International</h2>
+    <h2>International Design</h2>
     <h3>A personal exploration into understanding the purpose, benefits and design guidelines of localization, and why it's been so successful.</h3>
   </div>
   <div class="slim">
@@ -36,8 +36,7 @@
     </div>
     <div class="constraints">
       <h6>Narrow Field of View</h6>
-      <p>Living in a specific region, it’s easy to assume that your cultures design standards are glocal design standards, particularly in the english speaking world. As a result the majority of the internet's pages and market places are primarily in english. Some factors such as programming languages or the shortage of typographers in foreign languages could ocntribute to this problem. 
-      But often, this result sin designs that focus on the english speaking world, with the western world receiving a lot of attention. In order to design an accessible product, it’s important to recognize the influence of culture and language in design.</p>
+      <p>Living in a specific region, it’s easy to assume that your cultures design standards are global design standards, particularly in the English speaking world. As a result the majority of the internet's pages and market places are primarily in English. Some factors such as programming languages or the shortage of typographers in foreign languages could contribute to this problem. But often, this result sin designs that focus on the English speaking world, with the western world receiving a lot of attention. In order to design an accessible product, it’s important to recognize the influence of culture and language in design.</p>
     </div>
     <div class="constraints">
       <h6>Hofstede’s Cultural Dimension Theory </h6>
@@ -49,6 +48,9 @@
         <li><b>Uncertainty Avoidance:</b>: the degree of avoidance of uncertainty and ambiguity. High Avoidance cultures are more emotional, and control with regulations. Low Avoidance cultures are more pragmatic with less regulation.</li>
         <li><b>Long vs. Short-Term Orientation</b>: the time horizon of the society. Long term are future oriented, pragmatic rewarding persistence and saving and short term cultures focus on the present rewarding social relations .</li>
       </ul>
+      <p> Canada's scoring on Hoefstede's 5 dimensions can be seen below</p>
+      <img src="images/canada.png" class="full_image border"/>
+      <h5 class="caption">Sourced from: <a href="a">https://geert-hofstede.com/canada.html</a></h5>
       <p>While these dimensions were created in an attempt to decipher cultural values from a sociological perspective, the insights his systematic framework provide into cultural norms are extremely valuable and applicable to design.</p>
     </div>
     <div class="constraints">
@@ -60,9 +62,9 @@
     </div>
     <div class="constraints">
       <h6>Standardization</h6>
-      <p>While often confused with localization, standardization is a method of localization. This is the design of a global template - one design that can be modified to fit cultural norms while still preserving consistent high level design features (navigation, layout). Global templates make switching between  different countires less disruptive, and results in a homogeneous online culture that could  break down barriers and make one international market place. To do this its importnat to plan for variations in cultures by creating neutral templates with moving parts i.e. images, icons, copy (Modular or atomic design). Getting input from different cultures is extremely important, and layouts should be adaptabel to any country. A prime example of this method in place is Facebook.</p>
+      <p>While often confused with localization, standardization is a method of localization. This is the design of a global template - one design that can be modified to fit cultural norms while still preserving consistent high level design features (navigation, layout). Global templates make switching between different countries less disruptive, and results in a homogeneous online culture that could break down barriers and make one international market place. To do this its important to plan for variations in cultures by creating neutral templates with moving parts i.e. images, icons, copy (Modular or atomic design). Getting input from different cultures is extremely important, and layouts should be adaptable to any culture. A prime example of this method in place is Facebook.</p>
       <div class="center">
-      <img src="images/standard.png" class="full_image"/>
+        <img src="images/standard.png" class="full_image" />
       </div>
     </div>
     <div class="constraints">
@@ -70,14 +72,45 @@
       <p>Transcreation, the process of adapting your brand’s identity and message for different cultures and audiences. This is extremely important as different groups react differently to various symbols, messages, cues and even colours. Applied to all areas of design, this is creating completely distinct designs for each locale. The objective is to evoke the same emotions, messages and brand identity through different cultural cues and relationships. While this typically results in higher engagement and conversion, it can be extraordinarily expensive and often results in the company’s different locales working in segregation. The process of designing with this methodology is to treat each individual locale as their own distinct project. A more in depth analysis of this in action can be seen in the case study below </p>
     </div>
     <div class="constraints">
-    <h6>Design Takeaways</h6>
-    <p>While there isn't any agreement as to the benefit of transcreation or standardization, there are some general guidelines that can help designers address their diverse user base.</p>
-    <ul>
-      <li><u>Language</u>: A distinctive aspect of different cultures, which when moved to the online domain presents its own challenges of quality of translation, representation and stylistic elements</li>
-    </ul>
+      <h6>Design Takeaways</h6>
+      <p>While there isn't any agreement as to the benefit of transcreation or standardization, there are some general guidelines that can help designers address their diverse user base.</p>
+      <ul>
+        <li><b>Language</b>: a distinctive aspect of different cultures, that has four major considerations.
+          <ol>
+            <li><i>Directionality</i> should be addressed systematically and comprehensively but thankfully Google Material Design provides guidelines for mirroring interfaces.</li>
+            <li><i>Quality of translation</i>, particularly in the user's context is vital in messaging</li>
+            <li><i>Typography</i> must also be heavily considered as Bold and italics are often not available or confused copy in different script styles.</li>
+            <li><i>Length</i>, during translation the length of a language can change dramatically. This can effect layouts very drastically, particularly navigation were copy can overflow dedicated spaces. </li>
+          </ol>
+          <div class="center">
+            <img style="max-width: 280px;" src="images/length.png" class="border" />
+          </div>
+        </li>
+        <li><b>Units</b>: follow the norms of the local, date/time, currency, phone number or any data entry points to improve usability </li>
+        <li><b>Layout</b>: is a medium of communicating with the user, particularly in navigation. The meaning of the amount of negative space, orientation and pagination should all be considered through in different locales. For example, Japanese people tend to read in zones rather than linear, they filter through sections and look for explanations first and conclusion after. In English we often look for titles first and explanations after. Thus websites in Japan typically maximize content per space using small images and what looks like dense text to westerners.</li>
+        <li><b>Navigation</b>: pathing users through specific tunnels or flows also needs to be considered in context of different cultures. In cultures where directionality of language is right to left, navigation should also move from right to left.</li>
+        <li><b>Symbols</b>: Different symbols can have completely different meanings depending on culture and geographical location. Elements that are only familiar in certain parts of the world can make navigation extremely difficult. In mirrored interfaces particularly, icon directionality is particularly important. Toggles, slides and back buttons are all reversed.</li>
+        <li><b>Imagery</b>: Ethnicity, content, locale, activity, all considerations when selecting photographs, the amount of emotion and what an image can invoke are different. Even the use case for photography is different for various cultures.</li>
+        <li><b>Colours:</b> colour semiotics varies across cultures and can impact user expectations. In some cultures, colours are related to life, activity, fun and lack thereof is more stark, negative. In this case it is not uncommon to see bright and colorful sites with little to no white space.</li>
+        <li><b>Mental Models</b>: users look at data and make decisions differently. The way we interact with products is strongly defined by out culture, which affects the way we think. Consider how users in different cultures might consume information and make decisions.</li>
+      </ul>
     </div>
     <div class="constraints">
-      <h6>Review: A website that's different in two countries and why</h6>
+    <h6>Ethics</h6>
+    <p>Designing for a unfamiliar culture is a sensitive undertaking. It is extremely important to understand different cultural perspectives, while not stereotyping an entire population. Take care to not make assumptions, do the research and listen to locals, embrace the cultural characteristics and use them to your advantage. Don't forget the fundamental design principles that should help validate decisions. In the case of designing for foreign cultures, its even more important to go where your users are. Listen to their feedback and data, and be flexible. Even though we are familiar with design patterns, it may surprise you when a different cultural group reacts differently
+</p>
+    </div>
+    <div class="constraints">
+      <h6>Review: McDonald's</h6>
+      <p>McDonald's has drastically different websites for different locales around the world. They are often both praised and criticized for their highly personalized experiences based on country. Without access to their research and data, its difficult to say whether or not the benefits of transcreation far outweigh the costs. However, taking a look into the sites for specific countries reveals a great deal about the design considerations McDonald's took when creating their websites. Here we will look at <a href="http://www.mcdonalds.ca/ca/en.html">McDonald's Canada</a>, <a href="http://www.mcdonalds.com.cn/">McDonald's China</a> and <a href="http://www.mcdonalds.de/">McDonald's Germany. Specifically I will be looking at the design of their landing page, and the process of locating a restaurant near me.</a></p>
+      <ul>
+        <li><b>Canada</b>: For details on Canada's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/canada.html">here</a>.</li>
+        <img src="images/can_mc.png" class="full_image"/>
+        <li><b>Germany</b>: For details on Germany's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/germany.html">here</a>.</li>
+        <img src="images/gr_mc.png" class="full_image"/>
+        <li><b>China</b>: For details on China's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/china.html">here</a>.</li>
+        <img src="images/chn_mc.png" class="full_image"/>
+      </ul>
     </div>
   </div>
   <div class="bottom_nav">
